--- a/ShopSelfhost/App.config
+++ b/ShopSelfhost/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="MusicshopDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=JULEZLAPTOP\SQLEXPRESS;Initial Catalog=MusicshopDB;User ID=sa;Password=ifmswiR17" />
+  </connectionStrings>
 </configuration>
