changed db to mysql

--- a/ShopSelfhost/App.config
+++ b/ShopSelfhost/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="MusicshopDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=JULEZLAPTOP\SQLEXPRESS;Initial Catalog=MusicshopDB;User ID=sa;Password=ifmswiR17" />
+    <add name="MusicshopDatabase" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;Uid=admin;password=ifmswiR17;database=musicshopdb" />  
   </connectionStrings>
 </configuration>
